Avoid breaks in section.check-understanding

--- a/styles/books/algebra-1/book.scss
+++ b/styles/books/algebra-1/book.scss
@@ -230,6 +230,7 @@ section:has([data-type=note]) {
       border-color: (_ref: 'colorMap:::moduleTitleColor'),
       border-width: 1px,
       padding: v-spacing(2) 0,
+      break-inside: avoid,
     )
   )
 ));
