--- a/styles/designs/common/pdf/_module-components.scss
+++ b/styles/designs/common/pdf/_module-components.scss
@@ -27,5 +27,6 @@ $Module__Section--WithBorders:(
         border-left-style: enum('ValueSet:::OPTIONAL'),
         border-bottom-style: enum('ValueSet:::OPTIONAL'),
         border-right-style: enum('ValueSet:::OPTIONAL'),
+        break-inside: enum('ValueSet:::OPTIONAL'),
     )
 );
